fix(tabs): bind tabs overflow state with sp-tabs

--- a/packages/tabs/src/tabs-overflow.css
+++ b/packages/tabs/src/tabs-overflow.css
@@ -10,6 +10,8 @@ OF ANY KIND, either express or implied. See the License for the specific languag
 governing permissions and limitations under the License.
 */
 
+@import './spectrum-tabs-overflow.css';
+
 :host {
     inset: 0;
     width: 100%;
@@ -23,26 +25,18 @@ governing permissions and limitations under the License.
     --sp-tabs-overflow-button-size: var(
         --spectrum-global-dimension-static-size-500
     );
-    --sp-tabs-overflow-button-height: var(--spectrum-global-dimension-size-500);
+    --sp-tabs-overflow-button-height: var(
+        --spectrum-tabs-quiet-textonly-tabitem-height
+    );
     --sp-tabs-overflow-icon-color: var(--spectrum-gray-800);
     --sp-tabs-overflow-shadow-color: var(--spectrum-gray-100);
     --sp-tabs-overflow-shadow-width: 50px;
 }
 
-:host([size='s']) {
-    --sp-tabs-overflow-button-height: var(--spectrum-global-dimension-size-500);
-}
-
-:host([size='m']) {
-    --sp-tabs-overflow-button-height: var(--spectrum-global-dimension-size-600);
-}
-
-:host([size='l']) {
-    --sp-tabs-overflow-button-height: var(--spectrum-global-dimension-size-700);
-}
-
-:host([size='xl']) {
-    --sp-tabs-overflow-button-height: var(--spectrum-global-dimension-size-800);
+:host([compact]) {
+    --sp-tabs-overflow-button-height: var(
+        --spectrum-tabs-compact-textonly-height
+    );
 }
 
 sp-action-button {
